<resources>
   <string name="pk_name">名字</string>
    <string name="pk_change_pwd">修改密码</string>
    <string name="pk_my_message">我的消息</string>
    <string name="pk_my_record">充值记录</string>
    <string name="pk_cancle_user">注销账号</string>
    <string name="pk_my_accounts">PK玩账号</string>
    <string name="pk_user_name">qq411860630</string>
    <string name="pk_logining">正在登陆...</string>
    <string name="pk_hint">提示</string>
    <string name="pk_sure">确定</string>
    <string name="pk_cancel">取消</string>
    <string name="pk_is_cancel_pay">是否取消本次支付</string>
    <string name="pk_accounts">账号</string>
    <string name="pk_input_accounts">请输入账号</string>
    <string name="pk_notice">注意：修改密码成功后会重新登陆！</string>
    <string name="pk_save_change">保存修改</string>
    <string name="re_title">标题</string>
    <string name="pk_bind_phone">绑定手机</string>
    <string name="pk_coupon">我的优惠券</string>
    <string name="pk_gift_convert">输入兑换码</string>
    <string name="pk_float_msg">消息</string>
    <string name="pk_float_gift">礼包</string>
    <string name="pk_float_activity">活动</string>
</resources>
